# claustrum

./: .gitignore  LICENSE  README.md  claustrum
cloud/: README.md
cloud/bootstrap/: README.md  bootstrap_taxonomy.py  seed_topics.json
cloud/server/: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  pyproject.toml  test-local.sh
cloud/server/app/: archive.py  auth.py  db.py  main.py  migrate.py  models.py
cloud/server/app/routes/: checkin.py  claim.py  classify.py  domains.py  health.py  inbox.py  jobs.py  list_peers.py  propose.py  reset.py  resume.py  topics.py  ui.py  update.py
cloud/server/migrations/: 0001_init.sql  0002_archive.sql  0003_cold_archive.sql  0004_seed_topics.sql  0005_review_proposed_topics.sql  0006_domains.sql  0007_session_domain.sql  0008_seed_p21_topics.sql  0009_merge_workspace_automation_into_wa.sql
cloud/server/tests/: test_cli_classify.py  test_dedup.py  test_domains.py  test_hook_stop.py  test_jobs.py  test_propose.py  test_topics.py
cloud/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
