[project]
name = "claustrum-cloud-server"
version = "0.1.0"
description = "Claustrum Cloud — cross-machine coordination server"
requires-python = ">=3.11"
license = { file = "../../LICENSE" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8080

[tool.pytest.ini_options]
asyncio_mode = "auto"
